pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-305-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/305-lists.md
---
The number of windows in my house is

 1. The number of doors is 6.
