pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-311-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/311-lists.md
---
 1. a

 2. b

 3. c
